# zed-phpmd-lsp

./: .gitignore  AUTHORS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  extension.toml  extension.wasm
.github/: dependabot.yml  labels.yml
.github/DISCUSSION_TEMPLATE/: bug-report.yml  feature-request.yml  general.yml
.github/workflows/: manage-discussions.yml  pull-request.yml  release.yml  test.yml
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
scripts/: build.sh
src/: lib.rs  test.rs
test-files/: sample.php
