[package]
name = "phpmd-lsp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phpmd-lsp-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
regex = "1.0"
url = "2.0"
sha2 = "0.10"
lz4_flex = "0.11"

[dev-dependencies]
tokio-test = "0.4"